Fix dropdown menu visibility issue behind wavy header mask

--- a/style.css
+++ b/style.css
@@ -40,13 +40,25 @@ ul {
 
 /* Header */
 header {
-    background-color: #ffeb3b;
-    /* vibrant yellow back */
     position: sticky;
     top: 0;
     z-index: 1000;
     padding: 0;
-    /* Remove padding to let container handle it */
+}
+
+header::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #ffeb3b; 
+    background-image: url('Yellow_Back_to_School_Facebook_Post__2_-removebg-preview.png');
+    background-size: 100% 100%;
+    background-position: center bottom;
+    background-repeat: no-repeat;
+    z-index: -1;
     -webkit-mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1200 120' preserveAspectRatio='none'%3E%3Cpath d='M0,0L1200,0L1200,105 Q1050,120 900,105 T600,105 T300,105 T0,105 Z' fill='%23000'/%3E%3C/svg%3E");
     -webkit-mask-size: 100% 100%;
     mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1200 120' preserveAspectRatio='none'%3E%3Cpath d='M0,0L1200,0L1200,105 Q1050,120 900,105 T600,105 T300,105 T0,105 Z' fill='%23000'/%3E%3C/svg%3E");
@@ -59,14 +71,8 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-image: url('Yellow_Back_to_School_Facebook_Post__2_-removebg-preview.png');
-    background-size: 100% 100%;
-    background-position: center bottom;
-    background-repeat: no-repeat;
     padding: 1rem 20px;
-    /* Removed the extra 3rem bottom padding */
     height: 120px;
-    /* Set a specific height to maintain aspect reasonably well for the pencils */
 }
 
 .logo h1 {
